fix(ui): correct z-index so user menu renders properly with other modals

--- a/frontend/src/styles/header.css
+++ b/frontend/src/styles/header.css
@@ -120,7 +120,7 @@
   right: 20px;
   max-width: 175px;
   width: 100%;
-  z-index: 20;
+  z-index: 10;
   border-radius: 12px;
   box-shadow: 0px 0px 20px -6px rgba(0, 0, 0, 0.12);
   padding: 10px 0;
